k8s/storybook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quire-storybook
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
spec:
  ingressClassName: nginx
  rules:
    - host: quire.ix
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quire-storybook
                port:
                  number: 80
